Corrected missing theme-line in MANIFEST

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,7 @@ recursive-include ckan/templates *
 recursive-include ckan *.ini
 recursive-include ckanext/**/public *
 recursive-include ckanext/**/templates *
+recursive-include ckanext/**/theme *
 recursive-include ckanext/**/i18n *
 prune .git
 include CHANGELOG.txt
